# lutmac

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-test.yml
include/lutmac/: advanced_quantize.hpp  format.hpp  inference.hpp  lut_gemm.hpp  model.hpp  quantize.hpp  safetensors_parser.hpp  thread_pool.hpp  transform.hpp  types.hpp
src/: format.cpp  inference.cpp  model.cpp  quantize.cpp
src/kernels/: lut_gemm_scalar.cpp  lut_gemm_simd.cpp  lut_kernel.cpp  transform_simd.cpp
src/layers/: attention.cpp  embedding.cpp  ffn.cpp  norm.cpp
tests/: test_lut_gemm.cpp  test_quantization.cpp  test_tmac_correctness.cpp
tools/: check_repo.py  download_generic.py  download_lfm2.sh  download_model.py  download_samples.py  lutmac-bench.cpp  lutmac-inference.cpp  lutmac-quantize.cpp  merge_model.py  test_loader.cpp
